--- a/css/sass/elements/_quotes.scss
+++ b/css/sass/elements/_quotes.scss
@@ -136,6 +136,11 @@ blockquote {
 cite {
     color: $colorPrimaryHeroLight; 
     font-weight: normal;
+    
+    
+    &.text {
+	color: inherit;
+    }
 }
 
 
