--- a/css/sass/structure/navigation/_menu.scss
+++ b/css/sass/structure/navigation/_menu.scss
@@ -2,6 +2,7 @@
 /* Main menu
 /*-----------------------------------------------------------------------------------*/
 /* Primary Navigation */
+#nav-off-canvas,
 #nav {
 	@include no-list;
 	
@@ -193,43 +194,43 @@
 		padding: 0;
 		margin: 0;
 	}
-}
-#nav li.level1.has-sub > a:hover,
-#nav li.level1.focus.has-sub > a  {
-
+	
+	
+    li.level1.has-sub > a:hover,
+    li.level1.focus.has-sub > a  {
 	@include border-bottom-radius(0px);
 	background-color: $colorPrimary; 
 	color: #fff; 
-	
-	
-}
-#nav li.level1 a.clicked-once,
-#nav li.level1.focus.has-sub a,
-#nav li.level1:hover a, 
-#nav li.active a, 
-#nav li.level1:focus a, 
-#nav li.focus a {
+    }
+    li.level1 a.clicked-once,
+    li.level1.focus.has-sub a,
+    li.level1:hover a, 
+    li.active a, 
+    li.level1:focus a, 
+    li.focus a {
 	background-color: $colorPrimary; 
 	color: #fff; 
+
+    }
+
+    li.has-sub a.clicked-once, 
+    li.has-sub a:hover, 
+    li.has-sub a:focus, 
+    li.has-sub.active, 
+    li.has-sub:hover a, 
+    li.has-sub:focus a, 
+    li.has-sub.focus a {
+	color: $colorMainMenu;
+    }
+
+    li.level1:hover .nav-flyout, 
+    li.level1:focus .nav-flyout, 
+    li.focus .nav-flyout {
+	display: block;
+    }
 	
 }
 
-#nav li.has-sub a.clicked-once, 
-#nav li.has-sub a:hover, 
-#nav li.has-sub a:focus, 
-#nav li.has-sub.active, 
-#nav li.has-sub:hover a, 
-#nav li.has-sub:focus a, 
-#nav li.has-sub.focus a {
-	color: $colorMainMenu;
-
-}
-
-#nav li.level1:hover .nav-flyout, 
-#nav li.level1:focus .nav-flyout, 
-#nav li.focus .nav-flyout {
-	display: block;
-}
 
 
 
@@ -279,44 +280,48 @@
 	    top: 0;
 	    position: relative;
 	}
-
-	#nav .nav-flyout {
-	    display: block;
-	    position: relative;
-	    float: none;
-	    width: 100%;
-	    top: inherit;
-	    margin: 5px 0px;
-	    padding: 3px;
-	}
-	#nav li.level1:hover,
-	#nav .nav-flyout, 
-	#nav .nav-flyout:hover {
-	    background: none !important;
-	    box-shadow: none;
-	    margin: 0;
-	    
-	}
-	  
-	#nav li {
-	    float: none;
-	    display: block;
-	    margin: 0;
-	    padding: 0;
-	    a {
+	#nav-off-canvas,
+	#nav {
+	    .nav-flyout  {
+		display: block;
+		position: relative;
 		float: none;
+		width: 100%;
+		top: inherit;
+		margin: 5px 0px;
+		padding: 3px;
+	    }
+	    li {
+		float: none;
+		display: block;
+		margin: 0;
 		padding: 0;
-		:hover {
-		    text-decoration: underline;
-		    background: none;
+		a {
+		    float: none;
+		    padding: 0;
+		    :hover {
+			text-decoration: underline;
+			background: none;
+		    }
+		}
+		.nav-flyout a.button-portal {
+		    color: #fff;
+		    text-align: center;
+		    margin: 0 10px;
 		}
 	    }
-	    .nav-flyout a.button-portal {
-		color: #fff;
-		text-align: center;
-		margin: 0 10px;
+	    
+	    li.level1:hover,
+	    .nav-flyout, 
+	    .nav-flyout:hover {
+		background: none !important;
+		box-shadow: none;
+		margin: 0;   
 	    }
 	}
+
+	
+
 
     }
     
@@ -367,7 +372,7 @@
 
 			overflow-y: auto;
 
-			#nav {
+			#nav-off-canvas {
 				display: block;
 				
 				
@@ -407,7 +412,7 @@
 			-webkit-transition: -webkit-transform 240ms;
 			        transition: transform 240ms;
 		}
-
+		#nav-off-canvas,
 		#nav {
 		    .nav-flyout {
 			display: block;
@@ -451,6 +456,7 @@
 
 	}
 	.js {	
+	    #nav-off-canvas,  
 	    #nav {
 		margin: 10px 0 0 0;
 		display: none;
@@ -499,6 +505,7 @@
 	
 }
 @media (min-width: $screen-sm) {
+    #nav-off-canvas,
     #nav {
 	overflow: hidden; 
 	max-height: 37px;
