--- a/css/sass/structure/navigation/_metanav.scss
+++ b/css/sass/structure/navigation/_metanav.scss
@@ -2,7 +2,7 @@
 /* Meta-Navigation
 /*-----------------------------------------------------------------------------------*/
 .orgalist,
-#meta-nav {
+.meta-nav {
 	@include no-list;
 	padding: 0;
 	overflow: hidden;
@@ -90,7 +90,7 @@
 }
 
 
-#meta-nav {
+.meta-nav {
     display: none;
     @media (min-width: $screen-sm) {
 	display: inline;   
@@ -160,7 +160,7 @@
 
     .cloned-meta-links,
     .cloned-hero-nav,
-    #meta-nav {
+    .meta-nav {
 	display: block;
 	padding: 10px;
 	
@@ -254,7 +254,7 @@
 	 }
 	
     }
-     #meta-nav {
+     .meta-nav {
 	    padding: 10px 0;
      }
     
