--- a/css/sass/structure/navigation/_portalmenus.scss
+++ b/css/sass/structure/navigation/_portalmenus.scss
@@ -24,12 +24,13 @@
 		
 		
 		@media (max-width: $screen-xs - 1) {
-		    margin: 20px auto;
-		    float: none;
+		    margin: 0 5px;
+		    width: calc(50% - 10px);
 		}
 		@media (min-width: $screen-xs) and (max-width: $screen-sm - 1) {
 		    margin-left: 25px;
 		    clear: none; 
+		    width: calc(50% - 25px);
 		    &.menu-item:nth-of-type(odd) {
 			clear: left;
 			margin-left: 15px;
