--- a/css/sass/structure/navigation/_metanav.scss
+++ b/css/sass/structure/navigation/_metanav.scss
@@ -26,10 +26,9 @@
 			color: $colorMeta;
 			text-decoration: none;
 		}
-		
-		a:hover {
-		    text-decoration: underline;
-		}
+		a:focus,
+		a:hover,
+		&:focus-within a,
 		&:hover a, 
 		&:focus a {
 			text-decoration: underline;
