WCAG: focus verbessert bei startstop

--- a/css/sass/structure/hero/_slider.scss
+++ b/css/sass/structure/hero/_slider.scss
@@ -257,6 +257,7 @@
 	       color: #fff;
 	       background: #000;
 	       transition-timing-function: ease;
+	       text-decoration: underline;
        }	   
 
        .no-js & {
