Anpassugen für rrze video

--- a/css/sass/plugins/_rrze-video.scss
+++ b/css/sass/plugins/_rrze-video.scss
@@ -8,3 +8,10 @@
 	
     }
 }
+.rrze-video-widget-box  {
+    width: 100%;
+    
+    @media (min-width: 320px) {
+        max-width:270px;  
+    }
+}
