Hintergrundfarbe wieder gesetzt, damit der Übergang von Semitransparenz zu nichts nicht so auffällig und überraschend kommt

--- a/css/sass/structure/hero/_slider.scss
+++ b/css/sass/structure/hero/_slider.scss
@@ -43,7 +43,7 @@
 		    
 		    @media (min-width: $screen-sm) {
 			margin: 10px 0 15px 0;
-		//	background: rgba($colorPrimary,0.8);
+			background: rgba($colorPrimary,0.5);
 		    }
 	    
 	    }
@@ -69,7 +69,7 @@
 
 		    @media (min-width: $screen-sm) {
 			    display: inline;
-		//	    background: rgba($colorPrimary,0.8);
+			    background: rgba($colorPrimary,0.5);
 		    }
 
 	    }
