- Bugfix Theme Accordion for #555 - More code for Gutenberg :)

--- a/css/sass/gutenberg.scss
+++ b/css/sass/gutenberg.scss
@@ -12,7 +12,7 @@ $font-path-roboto:	'../fonts/roboto/';
 // da admin.css unter /css muss der pfad angepasst werden
 
 
-@import "frameworks/frameworks";
+@import "frameworks/bootstrap";
 // Mixins
 @import "mixins/mixins";
 // Fonts
