--- a/css/sass/gutenberg/_editor-style.scss
+++ b/css/sass/gutenberg/_editor-style.scss
@@ -153,11 +153,6 @@
     ul,
     ol {
 	    margin: 0 15px 10px 25px;
-
-	    @media (min-width: $screen-sm) {
-		margin-right: 0;
-	    }
-
     }
 
     ul ul,
@@ -172,8 +167,6 @@
 	padding: 3px 0 4px 4px;
 	@include px2rem($font-size-content-listitem);  
 	color: $colorText;
-
-
     }
 
 
@@ -265,7 +258,7 @@
 	    float:left;
 	    @include px2rem($font-size-larger * 3, $font-size-gridbase, $font-size-larger * 3);
 	    font-weight: 100;
-	    margin: 0 .1em 0 0;
+	    margin: 0 0.1em 0 0;
 	    text-transform:uppercase;
 	    font-style:normal;
 	}
