- Weitere Optionen in die Seiten-Eigenschaften geschoben, sowie das neue Toggle zum verbergen in der Navi links eingebaut.

--- a/css/sass/backend/_backend.scss
+++ b/css/sass/backend/_backend.scss
@@ -2,8 +2,10 @@
 /* Backend CSS
 /*-----------------------------------------------------------------------------------*/
 
+// Misc
+@import "misc";
 
-// Überschriften
+// Metaboxes
 @import "metaboxes";
 
 // Customizer Settings
