--- a/css/sass/gutenberg/_editor-sidebar.scss
+++ b/css/sass/gutenberg/_editor-sidebar.scss
@@ -4,7 +4,17 @@
 
     
     .blocks-font-size {
-	display: none;
+	 display: none;
     }
-
+    h3 {
+	font-weight: bold;
+    }
+    .subsetting {
+	margin-left: 20px;	
+    }
+    .customize-control-title {
+	 font-weight: bold;
+    }
+   
+    
 }
