--- a/css/sass/structure/footer/_footer.scss
+++ b/css/sass/structure/footer/_footer.scss
@@ -8,8 +8,7 @@
 	color: #fff;
 	padding: 0 0 20px 0;
 	
-	
-	
+
 	a {
 		color: #fff;
 		text-decoration: none;
@@ -24,6 +23,39 @@
 	}
 	@media (min-width: $screen-sm) {
 	    padding: 20px 0;
+	}
+	
+	.socialmedia {
+	    margin-top: 1rem;
+	    
+	    li {		
+		display: inline;
+		
+		a {
+		    padding:0;
+		    margin: 0 4px;
+		    display: inline-block;
+		    width: 26px;
+		    height: 26px;
+		    overflow: hidden;
+		    max-width: 26px;
+		    
+		    &:before {			
+			border: 1px solid #fff;
+		    }
+		   
+		    
+		}
+		a:hover,
+		a:focus {
+		    &:before {
+			background: #fff;
+			color: $colorPrimaryHero;
+		    }
+    		}
+		
+		
+	    }
 	}
 }
 
