--- a/css/sass/structure/footer/_footer.scss
+++ b/css/sass/structure/footer/_footer.scss
@@ -42,6 +42,8 @@
 		    
 		    &:before {			
 			border: 1px solid #fff;
+			box-shadow: 0px 0px 1px #fff;
+			// macht die ganze Sache etwas "runder"
 		    }
 		   
 		    
