--- a/css/sass/structure/navigation/_menu.scss
+++ b/css/sass/structure/navigation/_menu.scss
@@ -5,24 +5,24 @@
 #nav-off-canvas,
 #nav {
 	@include no-list;
-	
+
 	.nav-flyout {
 		display: none;
 		position: absolute;
 		z-index: 30;
 		top: 130px;
-		
+
 		@media (min-width: $screen-md) {
-		    top: 90px;
+			top: 90px;
 		}
-		    
-		    
+
+
 		left: 0;
 		right: 0;
 		background: $colorPrimary;
 		padding: 20px 0;
-		@include box-shadow(0 10px 10px rgba(0,0,0,0.3));
-		
+		@include box-shadow(0 10px 10px rgba(0, 0, 0, 0.3));
+
 		a.button-portal {
 			@include inline-block;
 			background: $colorHover !important;
@@ -30,25 +30,26 @@
 			font-size: 18px;
 			line-height: 18px;
 
-			&:hover, 
+			&:hover,
 			&:focus {
 				background: lighten($colorHover, 5%) !important;;
 			}
 		}
-		a:hover, 
+
+		a:hover,
 		a:focus {
 			text-decoration: none;
 			background-color: $colorHover;
 		}
-		
+
 	}
-	
+
 	li {
 		@include no-list;
 		display: block;
 		float: left;
-		
-		a {
+
+		a, [type=button] {
 			display: block;
 			float: left;
 			font-weight: bold;
@@ -56,20 +57,25 @@
 			text-decoration: none;
 			padding: 10px;
 			@include px2rem($font-size-nav-mainlinks, $font-size-gridbase, $font-size-nav-mainlinks);
-			
+
 			@include border-radius(4px);
 			margin: 0 0 10px 0;
 		}
-		
+
+		[type=button] {
+			border: none;
+			background-color: transparent;
+		}
+
 		ul {
 			@include no-list;
 			margin: 0 0 15px 0;
-			
+
 			li {
 				@include no-list;
 				float: none;
-				background: none; 
-				
+				background: none;
+
 				a {
 					float: none;
 					margin: 0;
@@ -83,107 +89,115 @@
 					color: #fff;
 
 				}
+
 				a:before {
-				    @extend .fa;
-				    @extend .fa-angle-right;	
-				    font-weight: bold;
-				    display: table-cell;
-				    width: 15px;
-				    padding-left: 2px;
+					@extend .fa;
+					@extend .fa-angle-right;
+					font-weight: bold;
+					display: table-cell;
+					width: 15px;
+					padding-left: 2px;
 				}
-				a:hover, 
+
+				a:hover,
 				a:focus {
 					text-decoration: none;
 					background-color: $colorHover;
 				}
-				
 			}
 		}
-		
+
 		.flyout-entries-full ul.sub-menu {
-		    display: flex;
-		    flex-wrap: wrap;
-		    flex-direction: column;
-		    justify-content: flex-start;
-		    max-height: 250px;
-		    align-items: flex-start;
-		    
-		    li {
-			width: 30%;
-		    }
-		    
-		    #off-canvas & {
-			display: block;
-			height: auto;
+			display: flex;
+			flex-wrap: wrap;
+			flex-direction: column;
+			justify-content: flex-start;
+			max-height: 250px;
+			align-items: flex-start;
+
 			li {
-			    width: inherit;
+				width: 30%;
 			}
-		    }
+
+			#off-canvas & {
+				display: block;
+				height: auto;
+
+				li {
+					width: inherit;
+				}
+			}
 		}
 	}
-		
+
 	li.has-sub {
-		> a {
+		> a, > [type=button] {
 			padding-bottom: 10px;
 			padding-right: 30px;
 			margin-bottom: 0px;
 			position: relative;
-		}
-		
-		> a:before {
-			@extend .fa;
-			@extend .fa-caret-down;
-			position: absolute;
-			top: 11px; 
-			right: 11px;
+
+			&:before {
+				@extend .fa;
+				@extend .fa-caret-down;
+				position: absolute;
+				top: 11px;
+				right: 11px;
+			}
 		}
 	}
-	
+
 	.introtext-full,
 	.introtext {
-	    p {
-		    color: #fff;
-		    @include px2rem($font-size-nav-introtext, $font-size-nav-introtext, 24);
-		    padding: 20px;
-		    margin: 0;
-		    opacity: 0.7;
-
-		    font-style: normal;
-		    font-weight: normal;
-	    }
-	    blockquote {
-		padding: 20px 20px 20px 70px; 
-		min-height: 40px;
-		
 		p {
-		    @include px2rem($font-size-nav-blockquote, $font-size-nav-blockquote, 24);
-		    padding: 0;
-		    font-style: italic;
+			color: #fff;
+			@include px2rem($font-size-nav-introtext, $font-size-nav-introtext, 24);
+			padding: 20px;
+			margin: 0;
+			opacity: 0.7;
+
+			font-style: normal;
+			font-weight: normal;
 		}
-		cite {
-		    padding: 10px 0;
-		    text-align: right;
-		    color: #fff;
-		    opacity: 0.7;
-		    @include px2rem($font-size-nav-blockquote-cite);
+
+		blockquote {
+			padding: 20px 20px 20px 70px;
+			min-height: 40px;
+
+			p {
+				@include px2rem($font-size-nav-blockquote, $font-size-nav-blockquote, 24);
+				padding: 0;
+				font-style: italic;
+			}
+
+			cite {
+				padding: 10px 0;
+				text-align: right;
+				color: #fff;
+				opacity: 0.7;
+				@include px2rem($font-size-nav-blockquote-cite);
+			}
+
+			&:before {
+				color: $colorHover;
+				top: 40px;
+				font-style: normal;
+				font-size: 90px;
+			}
 		}
-		&:before {
-		    color: $colorHover;
-		    top: 40px;
-		    font-style: normal;
-		    font-size: 90px;
-		}
-	    }
-	  
+
 	}
+
 	.introthumb {
-	    padding-top: 7px;
+		padding-top: 7px;
 	}
+
 	figcaption {
-	    color: #fff;
-	    opacity: 0.7;
-	    @include px2rem($font-size-nav-blockquote-cite);
-	} 
+		color: #fff;
+		opacity: 0.7;
+		@include px2rem($font-size-nav-blockquote-cite);
+	}
+
 	p.nav-excerpt {
 		color: $colorLightest;
 		font-size: 15px;
@@ -192,86 +206,106 @@
 		padding: 0;
 		margin: 0;
 	}
-	
-	
-     	
-    li.level1.has-sub a:hover,
-    li.level1.focus.has-sub a  {
-	@include border-bottom-radius(0px);
-	background-color: $colorPrimary; 
-	color: #fff; 
-    }
-    li.level1 a.clicked-once,
-    li.level1.focus.has-sub a,
-    li.level1:hover a, 
-    li.active a, 
-    li.level1:focus a, 
-    li.focus a {
-	background-color: $colorPrimary; 
-	color: #fff; 
 
-    }
 
-    li.has-sub a.clicked-once, 
-    li.has-sub a:hover, 
-    li.has-sub a:focus, 
-    li.has-sub.active, 
-    li.has-sub:hover a, 
-    li.has-sub:focus a, 
-    li.has-sub.focus a {
-	color: $colorMainMenu;
-    }
+	li.level1.has-sub a:hover,
+	li.level1.focus.has-sub a {
+		@include border-bottom-radius(0px);
+		background-color: $colorPrimary;
+		color: #fff;
+	}
 
-    
-   
-    li.level1:hover .nav-flyout, 
-    li.level1:focus .nav-flyout, 
-    li.focus .nav-flyout {
-	display: block;
-    }
-	
+	li.level1 a.clicked-once,
+	li.level1.focus.has-sub a,
+	li.level1:hover a,
+	li.active a,
+	li.level1:focus a,
+	li.focus a {
+		background-color: $colorPrimary;
+		color: #fff;
+
+	}
+
+	li.has-sub a.clicked-once,
+	li.has-sub a:hover,
+	li.has-sub a:focus,
+	li.has-sub.active,
+	li.has-sub:hover a,
+	li.has-sub:focus a,
+	li.has-sub.focus a {
+		color: $colorMainMenu;
+	}
+
+	body:not(.mainnav-forceclick) & {
+		li.level1:hover .nav-flyout,
+		li.level1:focus .nav-flyout,
+		li.focus .nav-flyout {
+			display: block;
+		}
+	}
 }
 
 #nav {
-    li.level1 a:hover {
-	background-color: $colorPrimary; 
-	color: #fff; 
-    }
-    li.level1:focus-within {
-	    background-color: $colorPrimary; 
-	    a {
-		 color: #fff; 
-	    }	
-	    .nav-flyout {
-		display: block;		
-		li {
-		    a {
-			color: #fff;
-			&:hover,
-			&:focus {
-			    background-color: $colorHover;
-			}
-		    }
-		}
-		
-	    }
-    }
-    li:hover .nav-flyout ul li {
-	a {
-	    color: #fff;
-	} 
 	a:hover,
 	a:focus {
-	    background-color: $colorHover;
+		background-color: $colorPrimary;
+		color: #fff;
 	}
-    }
-    
- 
+
+	[aria-expanded=true] + .nav-flyout a {
+		color: $colorMainMenu;
+	}
+
+	li.level1 > [type=button]:hover,
+	li.level1 > [type=button]:focus {
+		background-color: $colorHover;
+		color: $colorMainMenu;
+	}
+
+	li.level1 > [type=button][aria-expanded=true],
+	[aria-expanded=true] + .nav-flyout a:hover {
+		background-color: $colorPrimary;
+		color: $colorMainMenu;
+	}
+
+	body:not(.mainnav-forceclick) & li.level1:focus-within {
+		background-color: $colorPrimary;
+
+		a {
+			color: #fff;
+		}
+	}
+
+	body:not(.mainnav-forceclick) & li.level1:focus-within .nav-flyout,
+	li.level1 > [type=button][aria-expanded=true] + .nav-flyout {
+		display: block;
+
+		li {
+			a {
+				color: #fff;
+
+				&:hover,
+				&:focus {
+					background-color: $colorHover;
+				}
+			}
+		}
+	}
+
+	li:hover .nav-flyout ul li {
+		a {
+			color: #fff;
+		}
+
+		a:hover,
+		a:focus {
+			background-color: $colorHover;
+		}
+	}
 }
 
 
-
-#off-canvas, 
+#off-canvas,
 #off-canvas-overlay {
 	display: none;
 }
@@ -279,88 +313,89 @@
 
 /* New Toogle Button */
 #wrap #mainnav-toggle {
-  position: fixed;
-  right: 10px;
-  top: 0;
-  @include px2rem($font-size-mobile-meta);
-  background: transparent;
-  border: none;
-  display: none;
-  z-index: 100;
-  color: $colorMeta;
-   
-  @media (max-width: $screen-sm - 1) { 
-    .js & {
-	display: block;  
-    }
-  }
-  
-   span {
-       @include hideout();
-   }
+	position: fixed;
+	right: 10px;
+	top: 0;
+	@include px2rem($font-size-mobile-meta);
+	background: transparent;
+	border: none;
+	display: none;
+	z-index: 100;
+	color: $colorMeta;
+
+	@media (max-width: $screen-sm - 1) {
+		.js & {
+			display: block;
+		}
+	}
+
+	span {
+		@include hideout();
+	}
 }
+
 #mainnav-toggle:before {
-    @extend .fa;
-    @extend .fa-bars;   
+	@extend .fa;
+	@extend .fa-bars;
 }
-
-  
-
 
 
 @media (max-width: $screen-xs - 1) {
-    
-    .no-js {
-	.hide-mobile  {
-	    display: none;
-	    top: 0;
-	    position: relative;
-	}
-	#nav-off-canvas,
-	#nav {
-	    .nav-flyout  {
-		display: block;
-		position: relative;
-		float: none;
-		width: 100%;
-		top: inherit;
-		margin: 5px 0px;
-		padding: 3px;
-	    }
-	    li {
-		float: none;
-		display: block;
-		margin: 0;
-		padding: 0;
-		a {
-		    float: none;
-		    padding: 0;
-		    :hover {
-			text-decoration: underline;
-			background: none;
-		    }
+
+	.no-js {
+		.hide-mobile {
+			display: none;
+			top: 0;
+			position: relative;
 		}
-		.nav-flyout a.button-portal {
-		    color: #fff;
-		    text-align: center;
-		    margin: 0 10px;
+
+		#nav-off-canvas,
+		#nav {
+			.nav-flyout {
+				display: block;
+				position: relative;
+				float: none;
+				width: 100%;
+				top: inherit;
+				margin: 5px 0px;
+				padding: 3px;
+			}
+
+			li {
+				float: none;
+				display: block;
+				margin: 0;
+				padding: 0;
+
+				a {
+					float: none;
+					padding: 0;
+
+					:hover {
+						text-decoration: underline;
+						background: none;
+					}
+				}
+
+				.nav-flyout a.button-portal {
+					color: #fff;
+					text-align: center;
+					margin: 0 10px;
+				}
+			}
+
+			li.level1:hover,
+			.nav-flyout,
+			.nav-flyout:hover {
+				background: none !important;
+				box-shadow: none;
+				margin: 0;
+			}
 		}
-	    }
-	    
-	    li.level1:hover,
-	    .nav-flyout, 
-	    .nav-flyout:hover {
-		background: none !important;
-		box-shadow: none;
-		margin: 0;   
-	    }
+
+
 	}
 
-	
-
-
-    }
-    
 }
 
 @media (max-width: $screen-sm - 1) {
@@ -370,28 +405,28 @@
 		&.menu-toggled {
 			#off-canvas {
 				-webkit-transform: translate3d(0, 0, 0);
-				        transform: translate3d(0, 0, 0);
+				transform: translate3d(0, 0, 0);
 			}
 
-			#wrap, 
-			#footer, 
+			#wrap,
+			#footer,
 			.main-content-container {
 				-webkit-transform: translate3d(-250px, 0, 0);
-				        transform: translate3d(-250px, 0, 0);
+				transform: translate3d(-250px, 0, 0);
 			}
 
 			#off-canvas-overlay {
 				-webkit-transform: translate3d(0, 0, 0);
-				        transform: translate3d(0, 0, 0);
-				background-color: rgba(0,0,0,0.75);
+				transform: translate3d(0, 0, 0);
+				background-color: rgba(0, 0, 0, 0.75);
 			}
 		}
 
-		#off-canvas, 
+		#off-canvas,
 		#off-canvas-overlay {
 			display: block;
 		}
-		
+
 		#off-canvas {
 			position: fixed;
 			width: 250px;
@@ -402,26 +437,26 @@
 			background: #eee;
 
 			-webkit-transform: translate3d(100%, 0, 0);
-			        transform: translate3d(100%, 0, 0);
+			transform: translate3d(100%, 0, 0);
 			-webkit-transition: -webkit-transform 240ms;
-			        transition: transform 240ms;
+			transition: transform 240ms;
 
 			overflow-y: auto;
 
 			#nav-off-canvas {
 				display: block;
-				
-				
+
+
 				.level2 {
-				    li {
-					a {
-					  display: table;
-					    padding: 7px 20px 7px 0px;
-					    @include border-radius(0);
-					    border-bottom: 1px solid $colorHover;
-					    width: calc(100% - 20px);
+					li {
+						a {
+							display: table;
+							padding: 7px 20px 7px 0px;
+							@include border-radius(0);
+							border-bottom: 1px solid $colorHover;
+							width: calc(100% - 20px);
+						}
 					}
-				    }
 				}
 			}
 		}
@@ -432,46 +467,50 @@
 			right: 0;
 			left: 0;
 			bottom: 0;
-			background-color: rgba(0,0,0,0.0);
+			background-color: rgba(0, 0, 0, 0.0);
 			-webkit-transform: translate3d(100%, 0, 0);
-			        transform: translate3d(100%, 0, 0);
+			transform: translate3d(100%, 0, 0);
 			-webkit-transition: background-color 500ms ease-out;
-			        transition: background-color 500ms ease-out;
+			transition: background-color 500ms ease-out;
 			z-index: 998;
 		}
+
 		&.admin-bar #off-canvas {
-		    top: 46px;
+			top: 46px;
 		}
+
 		#wrap, #footer, .main-content-container {
 			-webkit-transform: translate3d(0, 0, 0);
-			        transform: translate3d(0, 0, 0);
+			transform: translate3d(0, 0, 0);
 			-webkit-transition: -webkit-transform 240ms;
-			        transition: transform 240ms;
+			transition: transform 240ms;
 		}
+
 		#nav-off-canvas,
 		#nav {
-		    .nav-flyout {
-			display: block;
-			overflow: hidden;
-			box-sizing: border-box;
-			max-height: 0;
-			padding: 0;
-			-webkit-transition: all 500ms;
-			        transition: all 500ms;
-
-			a {
-				color: $colorStandardHellgrau;
-			}
-
-			.container {
-				padding: 10px;
-			}
-		    }
-		    .focus {
 			.nav-flyout {
-				max-height: 1000px;
+				display: block;
+				overflow: hidden;
+				box-sizing: border-box;
+				max-height: 0;
+				padding: 0;
+				-webkit-transition: all 500ms;
+				transition: all 500ms;
+
+				a {
+					color: $colorStandardHellgrau;
+				}
+
+				.container {
+					padding: 10px;
+				}
 			}
-		    }
+
+			.focus {
+				.nav-flyout {
+					max-height: 1000px;
+				}
+			}
 		}
 
 
@@ -483,70 +522,70 @@
 
 			&:hover {
 				text-decoration: underline;
-			};
+			}
+		;
 		}
 
-		
-
-		
 
 	}
-	.js {	
-	    #nav-off-canvas,  
-	    #nav {
-		margin: 10px 0 0 0;
-		display: none;
-		    
-		&.toggled {
-			display: block;
-		}
-		    
-		li.level1 {
-			display: block;
-			float: none;
-			margin: 0;
-			border-bottom: 1px solid #ccc;
+	.js {
+		#nav-off-canvas,
+		#nav {
+			margin: 10px 0 0 0;
+			display: none;
+
+			&.toggled {
+				display: block;
+			}
+
+			li.level1 {
+				display: block;
+				float: none;
+				margin: 0;
+				border-bottom: 1px solid #ccc;
 
 
-			a {
-			    display: block;
-			    float: none;
-			    @include border-radius(0);
-			    margin-bottom: 0;
+				a {
+					display: block;
+					float: none;
+					@include border-radius(0);
+					margin-bottom: 0;
+				}
+			}
+
+			li.level2 {
+				background-position: left 6px;
+
+				a {
+					display: table;
+				}
+			}
+
+			.nav-flyout {
+				position: relative;
+				top: 0;
+				left: 0;
+				right: 0;
+				padding: 10px 0;
 			}
 		}
-		li.level2 {
-		    background-position: left 6px;
-		    a {
-			display: table;
-		    }    
-		}
-		.nav-flyout {
-		    position: relative;
-		    top: 0;
-		    left: 0;
-		    right: 0;
-		    padding: 10px 0;
-		}
-	    }
-	   
 
-	    body.admin-bar #nav .nav-flyout {
-		    top: 0;
-	    }
-	 }
 
-	
-	
-	
+		body.admin-bar #nav .nav-flyout {
+			top: 0;
+		}
+	}
+
+
 }
+
 @media (min-width: $screen-sm) {
-    #nav-off-canvas,
-    #nav {
-	overflow: hidden; 
-	max-height: 37px;
-	
-    }
+	#nav-off-canvas,
+	#nav {
+		overflow: hidden;
+		max-height: 37px;
+
+	}
 }
 
 
