Entscheidung für Navigationsstyling umsetzen

--- a/css/sass/structure/navigation/_menu.scss
+++ b/css/sass/structure/navigation/_menu.scss
@@ -280,65 +280,47 @@
 }
 
 .mainnav-plainview {
-	#nav ul {
+	#nav {
+		ul {
 
-		margin-bottom: 0;
+			margin-bottom: 0;
 
-		&.level2 > li {
-			margin-bottom: 30px;
+			&.level2 > li {
+				margin-bottom: 15px;
 
-			> a {
-				font-weight: bold;
+				&:not(.has-sub) {
+					> a {
+						border-bottom: none;
+					}
+				}
+
+				> a {
+					font-weight: bold;
+					border-bottom-color: $PalettonDunkler;
+					padding-left: 0;
+					&:before {
+						display: none;
+					}
+				}
+			}
+
+			&.level3 a {
+				color: $PalettonHellste;
 			}
 		}
-	}
 
-	.flyout-entries-full {
-		column-count: 3;
-		column-gap: 30px;
+		.flyout-entries-full {
+			column-count: 3;
+			column-gap: 30px;
 
-		@media (max-width: $screen-md - 1) {
-			column-count: 2;
-		}
-	}
-}
-
-.mainnav-plainview-2 {
-	#nav ul {
-		&.level2 > li {
-			> a {
-				background-color: $PalettonDunkler !important;
+			@media (max-width: $screen-md - 1) {
+				column-count: 2;
 			}
 		}
-	}
-}
 
-.mainnav-plainview-3 {
-	#nav ul {
-
-		&.level3 a {
-			color: $PalettonHellste;
+		.nav-flyout {
+			background: url("./img/siegel-zuv-schnitt.png") no-repeat 100% bottom, linear-gradient(to top, #005599 0%, #036 100%);
 		}
-	}
-
-	#nav .nav-flyout {
-		background: url("./img/siegel-zuv-schnitt.png") no-repeat 100% bottom, linear-gradient(to top, #004488 0%, #036 100%);
-	}
-}
-
-.mainnav-plainview-4 {
-	.flyout-entries-full {
-		background-color: $PalettonHellste;
-
-		a {
-			color: #000;
-		}
-	}
-}
-
-.mainnav-plainview-5 {
-	#nav .nav-flyout {
-		background: url("./img/siegel-zuv-schnitt.png") no-repeat 100% bottom, linear-gradient(to top, #004488 0%, #036 100%);
 	}
 }
 
